--- a/index.css
+++ b/index.css
@@ -13,26 +13,26 @@ h3 {
 
 h1 {
     color: whitesmoke;
-    font-size: 36px;
+    font-size: 1.75rem;
 }
 
 h2 {
     color: #451c7a;
-    font-size: 28px;
+    font-size: 1.375rem
     margin-top: 0;
 }
 
 h3 {
-    font-size: 20px;
+    font-size: 1.25rem;
 }
 
 p {
-    line-height: 23px;
+    line-height: 1.5;
 }
 
 .subheading {
     display: block;
-    font-size: 20px;
+    font-size: 1rem;
     color: #d0aaff;
 }
 
@@ -53,11 +53,13 @@ a:active {
 }
 
 .btn {
-    font-size: 18px;
+    font-size: 1.125rem;
     font-weight: 500;
     text-decoration: none;
-    display: inline-block;
-    padding: 10px 20px;
+    display: flex;
+    justify-content: center;
+    padding: 0.5em 1em;
+    margin-bottom: 1em;
     border-radius: 4.6px;
 }
 
@@ -84,10 +86,11 @@ a:active {
 
 /* ----- LAYOUT ----- */
 
+
 header, 
 section, 
 footer {
-    padding: 46px 0;
+    padding: 1.25em 0
 }
 
 header, 
@@ -101,25 +104,60 @@ header,
 
 .container {
     width: 90%;
+    max-width: 800px;
     margin: 0 auto;
 }
 
 .main-image {
     width: 100%;
-    margin-bottom: 32px;
-}
-
-.section-two-image-container {
-    display: flex;
-    justify-content: space-between;
+    display: block;
+    max-width: 640px;
+    margin: 0 auto 2em;
 }
 
 .feature-image {
-    width: 310px;
+    width: 100%;
     border-radius: 4.6px;
+    margin-bottom: 1em;
 }
 
 footer {
     text-align: center;
     color: #5f29a3;
+}
+
+/* ----- MEDIA QUERIES ----- */
+
+@media (min-width: 480px) {
+    .section-two-image-container {
+        display: flex;
+        justify-content: space-between;
+    }
+    
+    .feature-image {
+        width: 48.8%;        
+    }
+}
+@media(min-width: 768px) {
+    header, 
+    section, 
+    footer {
+        padding: 2.875em;
+    }
+    .btn{
+        display: inline-block;
+        margin-right: 5px;
+    }
+    h1{
+        font-size: 2.25rem;
+    }
+    h2{
+        font-size: 1.75rem;
+    }
+    .subheading{
+        font-size: 1.35rem;
+    }
+    p{
+        font-size: 1.125rem;
+    }
 }
