--- a/index.css
+++ b/index.css
@@ -14,11 +14,12 @@ h3 {
 h1 {
     color: whitesmoke;
     font-size: 1.75rem;
+    text-align: center;
 }
 
 h2 {
     color: #451c7a;
-    font-size: 1.375rem
+    font-size: 1.375rem;
     margin-top: 0;
 }
 
@@ -126,6 +127,29 @@ footer {
     color: #5f29a3;
 }
 
+/* ----- NAVIGATION---- */
+
+nav a {
+    color: #fff;
+    text-decoration: none;
+    font-size: 1.125rem;
+}
+
+ul {
+    padding: 0;
+    margin: 0;
+    list-style-type: none;
+    padding-top: 1rem;
+
+}
+
+li{
+     padding-top: 0.5rem;
+     padding-bottom: 0.5rem;
+     text-align: center;
+}
+
+
 /* ----- MEDIA QUERIES ----- */
 
 @media (min-width: 480px) {
@@ -138,6 +162,21 @@ footer {
         width: 48.8%;        
     }
 }
+
+@media (max-width: 767px) {
+    header {
+        text-align: center;
+    }
+
+    nav {
+        margin-top: 1em;
+    }  
+
+    li:not(:last-child) {
+        border-bottom: 1px dotted #a190b6;
+    }  
+}
+
 @media(min-width: 768px) {
     header, 
     section, 
@@ -150,6 +189,7 @@ footer {
     }
     h1{
         font-size: 2.25rem;
+        text-align: left
     }
     h2{
         font-size: 1.75rem;
@@ -159,5 +199,8 @@ footer {
     }
     p{
         font-size: 1.125rem;
+    }
+    li{
+        text-align: left;
     }
 }
